--- a/WebApp/Views/User/_AddUserModal.cshtml
+++ b/WebApp/Views/User/_AddUserModal.cshtml
@@ -18,12 +18,27 @@
                 <form id="addUserForm">
                     <input type="hidden" id="addUserId" name="UserId" value="@Model.UserId" />
                     <div class="form-group">
-                        <label asp-for="Name" class="control-label"></label>
-                        <input asp-for="Name" class="form-control" id="addUserName" name="Name" maxlength="100" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <label asp-for="FirstName" class="control-label"></label> <span class="text-red-500">*</span>
+                        <input asp-for="FirstName" class="form-control" id="addUserFirstName" name="FirstName" maxlength="100" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
+                        <label asp-for=MiddleName class="control-label"></label>
+                        <input asp-for=MiddleName class="form-control" id="addUserMiddleName" name=MiddleName maxlength="100" />
+                        <span asp-validation-for=MiddleName class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=LastName class="control-label"></label> <span class="text-red-500">*</span>
+                        <input asp-for=LastName class="form-control" id="addUserLastName" name=LastName maxlength="100" />
+                        <span asp-validation-for=LastName class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=Suffix class="control-label"></label>
+                        <input asp-for=Suffix class="form-control" id="addUserSuffix" name=Suffix maxlength="100" />
+                        <span asp-validation-for=Suffix class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label> <span class="text-red-500">*</span>
                         <input asp-for="Email" class="form-control" id="addUserEmail" name="Email" maxlength="100"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
