--- a/WebApp/Views/User/_EditUserModal.cshtml
+++ b/WebApp/Views/User/_EditUserModal.cshtml
@@ -2,13 +2,14 @@
 
 @{
     var Roles = ViewBag.Roles;
+    bool isSuper = User.HasClaim("IsSuperAdmin", "true");
 }
 
 <div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="editUserModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
+                <h5 class="modal-title" id="editUserModalLabel">Update User</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -16,13 +17,29 @@
             <div class="modal-body">
                 <form id="editUserForm">
                     <input type="hidden" id="editUserId" name="UserId" value="@Model.UserId" />
+                    <input type="hidden" id="editIsVerified" name="IsVerified" value="@Model.IsVerified" />
                     <div class="form-group">
-                        <label asp-for="Name" class="control-label"></label>
-                        <input asp-for="Name" class="form-control" id="editUserName" name="Name" maxlength="100" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <label asp-for="FirstName" class="control-label"></label> <span class="text-red-500">*</span>
+                        <input asp-for="FirstName" class="form-control" id="editUserFirstName" name="FirstName" maxlength="100" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
+                        <label asp-for=MiddleName class="control-label"></label>
+                        <input asp-for=MiddleName class="form-control" id="editUserMiddleName" name=MiddleName maxlength="100" />
+                        <span asp-validation-for=MiddleName class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=LastName class="control-label"></label> <span class="text-red-500">*</span>
+                        <input asp-for=LastName class="form-control" id="editUserLastName" name=LastName maxlength="100" />
+                        <span asp-validation-for=LastName class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for=Suffix class="control-label"></label>
+                        <input asp-for=Suffix class="form-control" id="editUserSuffix" name=Suffix maxlength="100" />
+                        <span asp-validation-for=Suffix class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label> <span class="text-red-500">*</span>
                         <input asp-for="Email" class="form-control" id="editUserEmail" name="Email" maxlength="100" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
@@ -31,7 +48,7 @@
                         <select asp-for="RoleId" class="form-control" id="editUserRole">
                             @foreach (var item in Roles)
                             {
-                                if (item.Name == "Admin") continue;
+                                if (item.Name == "Admin" && !isSuper) continue;
                                 <option value="@item.RoleId">@item.Name</option>
                             }
                         </select>
