--- a/WebApp/Views/User/_EditUserModal.cshtml
+++ b/WebApp/Views/User/_EditUserModal.cshtml
@@ -14,35 +14,44 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
+
             <div class="modal-body">
                 <form id="editUserForm">
                     <input type="hidden" id="editUserId" name="UserId" value="@Model.UserId" />
                     <input type="hidden" id="editIsVerified" name="IsVerified" value="@Model.IsVerified" />
-                    <div class="form-group">
-                        <label asp-for="FirstName" class="control-label"></label> <span class="text-red-500">*</span>
-                        <input asp-for="FirstName" class="form-control" id="editUserFirstName" name="FirstName" maxlength="100" />
-                        <span asp-validation-for="FirstName" class="text-danger"></span>
+
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label asp-for="FirstName" class="control-label"></label> <span class="text-red-500">*</span>
+                            <input asp-for="FirstName" class="form-control" id="editUserFirstName" name="FirstName" maxlength="100" />
+                            <span asp-validation-for="FirstName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="MiddleName" class="control-label"></label>
+                            <input asp-for="MiddleName" class="form-control" id="editUserMiddleName" name="MiddleName" maxlength="100" />
+                            <span asp-validation-for="MiddleName" class="text-danger"></span>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for=MiddleName class="control-label"></label>
-                        <input asp-for=MiddleName class="form-control" id="editUserMiddleName" name=MiddleName maxlength="100" />
-                        <span asp-validation-for=MiddleName class="text-danger"></span>
+
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label asp-for="LastName" class="control-label"></label> <span class="text-red-500">*</span>
+                            <input asp-for="LastName" class="form-control" id="editUserLastName" name="LastName" maxlength="100" />
+                            <span asp-validation-for="LastName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="Suffix" class="control-label"></label>
+                            <input asp-for="Suffix" class="form-control" id="editUserSuffix" name="Suffix" maxlength="100" />
+                            <span asp-validation-for="Suffix" class="text-danger"></span>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for=LastName class="control-label"></label> <span class="text-red-500">*</span>
-                        <input asp-for=LastName class="form-control" id="editUserLastName" name=LastName maxlength="100" />
-                        <span asp-validation-for=LastName class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for=Suffix class="control-label"></label>
-                        <input asp-for=Suffix class="form-control" id="editUserSuffix" name=Suffix maxlength="100" />
-                        <span asp-validation-for=Suffix class="text-danger"></span>
-                    </div>
+
                     <div class="form-group">
                         <label asp-for="Email" class="control-label"></label> <span class="text-red-500">*</span>
                         <input asp-for="Email" class="form-control" id="editUserEmail" name="Email" maxlength="100" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
+
                     <div class="form-group">
                         <label asp-for="RoleId" class="control-label"></label>
                         <select asp-for="RoleId" class="form-control" id="editUserRole">
@@ -55,6 +64,7 @@
                     </div>
                 </form>
             </div>
+
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" onclick="submitEditUser()">Save changes</button>
