--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -29,7 +29,7 @@
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="Index" asp-controller="User" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "User" ? "bg-gray-200" : "")">
+                <a asp-action="GetAllUsers" asp-controller="User" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "User" ? "bg-gray-200" : "")">
                     <i class="fa fa-users mr-2"></i>
                     Users
                 </a>
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="" asp-controller="" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "JobManagement" ? "bg-gray-200" : "")">
+                <a asp-action="RecruiterGetAll" asp-controller="Job" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Job" ? "bg-gray-200" : "")">
                     <i class="fa fa-suitcase mr-2"></i>
                     Jobs
                 </a>
