--- a/WebApp/Views/User/Index.cshtml
+++ b/WebApp/Views/User/Index.cshtml
@@ -7,6 +7,8 @@
     await Html.RenderPartialAsync("_ResetPasswordModal");
     await Html.RenderPartialAsync("_DeleteModal");
 
+    string aspAction = "GetAllUsers";
+
     string filterBy = ViewData["FilterBy"] as string;
     string sortBy = ViewData["SortBy"] as string;
     string role = ViewData["Role"] as string;
@@ -20,7 +22,7 @@
 <div class="nav-header flex items-center justify-between">
     <h1 class="display-6 text-3xl font-semibold">User Management</h1>
     <div class="flex items-center">
-        <form method="get" asp-action="Index" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy" class="flex items-center">
+        <form method="get" asp-action="@aspAction" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy" class="flex items-center">
             <div class="flex">
                 <input type="text" name="filterBy" class="form-control btn-radius rounded-l-md border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Name or email" value="@filterBy" />
                 <button type="submit" class="btn btn-primary btn-radius-r rounded-r-md bg-blue-500 px-3 py-2 text-white hover:bg-blue-600">
@@ -61,13 +63,13 @@
                     Name
                 </th>
                 <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
-                    <a asp-action="Index" asp-route-sortBy="@sortByName" asp-route-filterBy="@filterBy" asp-route-pageIndex="@pageIndex" asp-route-role="@role" asp-route-verified="@verified" class="text-black hover:text-blue-500">
+                    <a asp-action="@aspAction" asp-route-sortBy="@sortByName" asp-route-filterBy="@filterBy" asp-route-pageIndex="@pageIndex" asp-route-role="@role" asp-route-verified="@verified" class="text-black hover:text-blue-500">
                         @Html.DisplayNameFor(model => model.First().LastName)
                         @(string.IsNullOrEmpty(sortBy) ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "name_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
                     </a>
                 </th>
                 <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
-                    <a asp-action="Index" asp-route-sortBy="@sortByEmail" asp-route-filterBy="@filterBy" asp-route-pageIndex="@pageIndex" asp-route-role="@role" asp-route-verified="@verified" class="text-black hover:text-blue-500">
+                    <a asp-action="@aspAction" asp-route-sortBy="@sortByEmail" asp-route-filterBy="@filterBy" asp-route-pageIndex="@pageIndex" asp-route-role="@role" asp-route-verified="@verified" class="text-black hover:text-blue-500">
                         @Html.DisplayNameFor(model => model.First().Email)
                         @(sortBy == "email" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "email_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
                     </a>
@@ -85,10 +87,10 @@
                             <i class="fa-solid fa-chevron-down"></i>
                         </a>
                         <div class="dropdown-menu absolute hidden pt-1 text-gray-700" aria-labelledby="roleDropdown">
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100" asp-action="Index" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy" asp-route-role="" asp-route-verified="@verified">All</a>
+                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100" asp-action="@aspAction" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy" asp-route-role="" asp-route-verified="@verified">All</a>
                             @foreach (var r in ViewBag.Roles)
                             {
-                                <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100" asp-action="Index" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy" asp-route-role="@r.Name" asp-route-verified="@verified">@r.Name</a>
+                                <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100" asp-action="@aspAction" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy" asp-route-role="@r.Name" asp-route-verified="@verified">@r.Name</a>
                             }
                         </div>
                     </div>
@@ -106,20 +108,20 @@
                             <i class="fa-solid fa-chevron-down"></i>
                         </a>
                         <div class="dropdown-menu absolute hidden pt-1 text-gray-700" aria-labelledby="verifiedDropdown">
-                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100" 
-                                asp-action="Index" 
+                            <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
+                                asp-action="@aspAction"
                                 asp-route-sortBy="@sortBy" 
                                 asp-route-filterBy="@filterBy" 
                                 asp-route-role="@role" 
                                 asp-route-verified="">All</a>
                             <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="Index"
+                               asp-action="@aspAction"
                                asp-route-sortBy="@sortBy"
                                asp-route-filterBy="@filterBy"
                                asp-route-role="@role"
                                asp-route-verified="true">Verified</a>
                             <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
-                               asp-action="Index"
+                               asp-action="@aspAction"
                                asp-route-sortBy="@sortBy"
                                asp-route-filterBy="@filterBy"
                                asp-route-role="@role" 
@@ -195,19 +197,19 @@
             @if (Model.HasPreviousPage)
             {
                 <li class="page-item">
-                    <a class="page-link border border-gray-300 px-3 py-1 text-gray-700 hover:bg-gray-200" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex - 1)" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy">Previous</a>
+                    <a class="page-link border border-gray-300 px-3 py-1 text-gray-700 hover:bg-gray-200" asp-action="@aspAction" asp-route-pageIndex="@(Model.PageIndex - 1)" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy">Previous</a>
                 </li>
             }
             @for (int i = 1; i <= Model.TotalPages; i++)
             {
                 <li class="page-item @(i == Model.PageIndex ? "active" : "")">
-                    <a class="page-link border border-gray-300 px-3 py-1 @(i == Model.PageIndex ? "bg-blue-500 text-white" : "text-gray-700 hover:bg-gray-200")" asp-action="Index" asp-route-pageIndex="@i" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy">@i</a>
+                    <a class="page-link border border-gray-300 px-3 py-1 @(i == Model.PageIndex ? "bg-blue-500 text-white" : "text-gray-700 hover:bg-gray-200")" asp-action="@aspAction" asp-route-pageIndex="@i" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy">@i</a>
                 </li>
             }
             @if (Model.HasNextPage)
             {
                 <li class="page-item">
-                    <a class="page-link border border-gray-300 px-3 py-1 text-gray-700 hover:bg-gray-200" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex + 1)" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy">Next</a>
+                    <a class="page-link border border-gray-300 px-3 py-1 text-gray-700 hover:bg-gray-200" asp-action="@aspAction" asp-route-pageIndex="@(Model.PageIndex + 1)" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy">Next</a>
                 </li>
             }
         </ul>
@@ -216,7 +218,7 @@
 
 <!-- Values passed to the js files -->
 <div id="tempDataContainer" data-success="@TempData["SuccessMessage"]" data-error="@TempData["ErrorMessage"]"></div>
-<input type="hidden" id="baseUrl" value="@Url.Action("Index", "User")" />
+<input type="hidden" id="baseUrl" value="@Url.Action("GetAllUsers", "User")" />
 <input type="hidden" id="resetUrl" value="@Url.Action("ResetPassword", "User")" />
 <input type="hidden" id="deleteUrl" value="@Url.Action("Delete", "User")" />
 
@@ -225,17 +227,6 @@
     <script src="~/js/toastrNotification.js"></script>
     <script src="~/js/user.js"></script>
     <script>
-        $(document).ready(function () {
-            $('#notifBellBtn').click(function () {
-                $.ajax({
-                    url: '@Url.Action("Index", "Notification")',
-                    success: function (result) {
-                        $('#notificationModal .modal-content').html(result);
-                        $('#notificationModal').modal('show');
-                    }
-                });
-            });
-
             $('#roleDropdown').on('click', function (e) {
                 e.preventDefault();
                 $(this).next('.dropdown-menu').toggleClass('hidden');
