Add User Authentication frontend, Dashboard placeholder

--- a/WebApp/Views/Account/ForgotPassword.cshtml
+++ b/WebApp/Views/Account/ForgotPassword.cshtml
@@ -19,11 +19,11 @@
             </div>
             <div class="card rounded-3 text-color">
                 <div class="card-body p-md-5 mx-md-4">
-                    <h4 class="mb-3 poppins-medium">Reset Your Password</h4>
+                    <h4 class="mb-3 inter-medium">Reset Your Password</h4>
                     <p class="mb-4">Your request will be sent to admins, who will contact you via email.</p>
                     <form method="post" asp-action="PostForgotPassword" id="loginForm">
                         <div class="form-outline mb-4">
-                            <label class="form-label poppins-medium" for="form2Example11">Email Address</label>
+                            <label class="form-label inter-medium" for="form2Example11">Email Address</label>
                             <input type="text" id="form2Example11" class="form-control"
                                    asp-for="Email" placeholder="Input your Email Address"/>
                             <span asp-validation-for="Email" class="text-danger"></span>
