--- a/WebApp/wwwroot/css/articles.css
+++ b/WebApp/wwwroot/css/articles.css
@@ -1,5 +1,5 @@
-poppins-semi-bold {
-    font-family: 'Poppins', sans-serif;
+inter-semi-bold {
+    font-family: 'Inter', sans-serif;
     font-weight: 600;
     font-size: 24px;
 }
