--- a/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/Views/Account/Login.cshtml
@@ -13,15 +13,16 @@
             <div class="text-left pb-0">
                 <p class="text-4xl font-bold">Sign In</p>
             </div>
-            <div class="text-left text-black font-medium text-sm pb-3">
+            <div class="text-left text-black font-medium text-sm pb-3 subpixel-antialiased">
                 <p>Don't have an account? <a href="" class="text-[#7A1515] underline" data-toggle="modal" data-target="#registerUserModal">Create Account</a></p>
             </div>
             <div class="mb-3">
+
                 <label class="block font-medium mb-1" for="emailInput">Email Address <span class="text-red-350">*</span></label>
                 <input type="email" asp-for="Email" id="emailInput" required
                        class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent hover:border-[#991b1b]" />
             </div>
-            <div class="mb-3">
+            <div class="mb-2">
                 <label class="block font-medium mb-1" for="passwordInput">Password <span class="text-red-350">*</span></label>
                 <div class="relative">
                     <input type="password" asp-for="Password" id="passwordInput" required
@@ -45,9 +46,14 @@
                     <span class="text-red-500 text-sm mt-1 block">@(TempData["ErrorMessageLogin"])</span>
                 }
             </div>
+
+            <div class="text-right text-black font-medium text-sm">
+                <p><a href="" class="text-[#7A1515]" data-toggle="modal" data-target="#resetPasswordModal">Forgot Password?</a></p>
+            </div>
+
             <div>
                 <button type="submit" id="loginButton" disabled
-                        class="mt-2 bg-[#7A1515] hover:bg-[#A53D3D] text-white font-semibold py-2 px-4 rounded w-full flex justify-center items-center disabled:bg-white-400 disabled:cursor-not-allowed">
+                        class="mt-2 bg-[#743030] hover:bg-[#A53D3D] text-white font-semibold py-2 px-4 rounded w-full flex justify-center items-center disabled:bg-white-400 disabled:cursor-not-allowed">
                     Sign in
                 </button>
             </div>
