--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
             @RenderBody()
             @if(ViewBag.loginView == true)
 			{
-                <footer class="footer d-flex justify-content-between align-items-center mb-3 p-0" style="color:white;">
+                <footer class="footer d-flex justify-content-between align-items-center mb-3 p-0" style="color:black; z-index:1;">
                     <div>
                         <img src="~/img/logoBW.png" style="width: 150px;" alt="login-logo" class="ml-5" />
                     </div>
