--- a/WebApp/Views/User/Index.cshtml
+++ b/WebApp/Views/User/Index.cshtml
@@ -20,12 +20,12 @@
 }
 
 <div class="nav-header flex items-center justify-between">
-    <h1 class="display-6 text-3xl font-semibold">User Management</h1>
+    <h1 class="display-6 text-3xl font-semibold text-[#7A1515]">User Management</h1>
     <div class="flex items-center">
         <form method="get" asp-action="@aspAction" asp-route-sortBy="@sortBy" asp-route-filterBy="@filterBy" class="flex items-center">
             <div class="flex">
-                <input type="text" name="filterBy" class="form-control btn-radius rounded-l-md border border-gray-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Name or email" value="@filterBy" />
-                <button type="submit" class="btn btn-primary btn-radius-r rounded-r-md bg-blue-500 px-3 py-2 text-white hover:bg-blue-600">
+                <input type="text" name="filterBy" class="form-control btn-radius rounded-l-md border border-gray-300 hover:border-[#991b1b] px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Name or email" value="@filterBy" />
+                <button type="submit" class="btn btn-primary btn-radius-r rounded-r-md bg-[#7A1515] px-3 py-2 text-white hover:border-[#991b1b]">
                     <i class="fa fa-search"></i>
                 </button>
             </div>
