--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -44,7 +44,7 @@
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="GetAll" asp-controller="Job" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Job" ? "bg-gray-200" : "")">
+                <a asp-action="GetAllJobsAdmin" asp-controller="Job" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Job" ? "bg-gray-200" : "")">
                     <i class="fa fa-suitcase mr-2"></i>
                     Jobs
                 </a>
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li class="py-2">
-                <a asp-action="RecruiterGetAll" asp-controller="Job" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Job" ? "bg-gray-200" : "")">
+                <a asp-action="GetAllJobsRecruiter" asp-controller="Job" class="flex items-center rounded px-2 py-1 hover:bg-gray-200 @(ViewContext.RouteData.Values["Controller"].ToString() == "Job" ? "bg-gray-200" : "")">
                     <i class="fa fa-suitcase mr-2"></i>
                     Jobs
                 </a>
